fix #293 mandatory icon wrong alignment

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -2438,6 +2438,7 @@ img.smallicon {
 .text-error {
     color: [[setting:dangericoncolor]] !important;
     margin-right: 1px !important;
+    margin-top: 8px !important;
 }
 
 
